# Project4-CUDA-ICP

./: CMakeLists.txt  CMakeLists.txt_backup  README.md
PICP/: CMakeLists.txt  common.h  picp.cu  picp.h
data/: dragonSideRight_0.ply  dragonSideRight_120.ply  dragonSideRight_24.ply  dragonSideRight_48.ply  dragonSideRight_72.ply  dragonSideRight_96.ply
src/: common.h  kdtree.cpp  kdtree.hpp  kernel.cu  kernel.h  main.cpp  main.cpp_back  main.hpp  svd3.h
